[workspace]
resolver = "2"
members = [
    "crates/*",
    "cumulus/client/block-builder",
    "cumulus/client/cli",
    "cumulus/client/cirrus-service",
    "cumulus/client/cirrus-executor",
    "cumulus/client/consensus/common",
    "cumulus/client/consensus/relay-chain",
    "cumulus/client/executor-gossip",
    "cumulus/client/fraud-proof",
    "cumulus/pallets/executive",
    "cumulus/parachain-template/node",
    "cumulus/parachain-template/runtime",
    "cumulus/primitives",
    "cumulus/test/runtime",
    "cumulus/test/service",
    "polkadot/node/collation-generation",
    "polkadot/node/core/chain-api",
    "polkadot/node/core/runtime-api",
    "polkadot/node/jaeger",
    "polkadot/node/metered-channel",
    "polkadot/node/metrics",
    "polkadot/node/overseer",
    "polkadot/node/overseer/overseer-gen",
    "polkadot/node/overseer/overseer-gen/proc-macro",
    "polkadot/node/subsystem",
    "polkadot/node/subsystem-types",
    "polkadot/node/subsystem-util",
    "substrate/*",
    "test/subspace-test-client",
    "test/subspace-test-runtime",
    "test/subspace-test-service",
]

[patch."https://github.com/paritytech/substrate"]
sc-block-builder = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-chain-spec = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-cli = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-client-api = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-client-db = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-consensus = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-consensus-slots = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-consensus-uncles = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-executor = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-informant = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-keystore = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-network = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-network-gossip = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-offchain = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-rpc = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-rpc-api = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-service = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-telemetry = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-tracing = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-transaction-pool = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sc-transaction-pool-api = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }

sp-api = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-application-crypto = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-arithmetic = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-block-builder = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-blockchain = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-consensus = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-consensus-slots = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-core = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-externalities = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-inherents = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-io = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-keystore = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-keyring = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-offchain = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-rpc = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-runtime = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-runtime-interface = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-session = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-state-machine = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-std = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-storage = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-timestamp = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-tracing = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-transaction-pool = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-trie = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
sp-version = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }

frame-benchmarking-cli = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
frame-executive = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
frame-support = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
frame-system = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
frame-system-rpc-runtime-api = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }

substrate-frame-rpc-system = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }

pallet-balances = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-session = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-sudo = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-timestamp = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-transaction-payment = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-transaction-payment-rpc = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }
pallet-utility = { git = "https://github.com/subspace/substrate", rev = "74824b2ef35de5b07334c232a5ae52097f6acf48" }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-erasure = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
sloth256-189 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
